--- a/BirthCoach/Storyboards/Base.lproj/MainStoryboard_iPhone.storyboard
+++ b/BirthCoach/Storyboards/Base.lproj/MainStoryboard_iPhone.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="QqC-Gy-unH">
     <dependencies>
-        <deployment version="1536" defaultVersion="1536" identifier="iOS"/>
+        <deployment version="1536" defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
     </dependencies>
     <scenes>
@@ -552,7 +552,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Edit Contraction" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="s7k-Ja-VZg">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="41"/>
+                                <rect key="frame" x="0.0" y="20" width="320" height="41"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.37254901960784315" green="0.69411764705882351" blue="0.72549019607843135" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
@@ -716,7 +716,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                                         <rect key="frame" x="0.0" y="22" width="197" height="54"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="NrZ-RH-esR" id="tW9-72-hHS">
-                                            <rect key="frame" x="0.0" y="0.0" width="197" height="53"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="197" height="54"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="2:23" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" id="QTY-Qg-Pw6">
@@ -770,7 +770,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                                         <rect key="frame" x="0.0" y="22" width="123" height="27"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="zQt-QV-6yR" id="j5S-Oy-cmJ">
-                                            <rect key="frame" x="0.0" y="0.0" width="123" height="26"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="123" height="27"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" id="JNM-aj-inf">
@@ -786,7 +786,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                                         <rect key="frame" x="0.0" y="49" width="123" height="54"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="swI-ze-ede" id="P6Q-cG-6sP">
-                                            <rect key="frame" x="0.0" y="0.0" width="123" height="53"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="123" height="54"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="3:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" id="FNT-AB-fxS">
@@ -1041,18 +1041,49 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
     </scenes>
     <resources>
         <image name="blue-circle-selected.png" width="29" height="29"/>
+        <image name="blue-circle-selected.png" width="29" height="29"/>
+        <image name="blue-circle-selected.png" width="29" height="29"/>
+        <image name="blue-circle-selected.png" width="29" height="29"/>
+        <image name="blue-circle-selected.png" width="29" height="29"/>
+        <image name="blue-circle-selected.png" width="29" height="29"/>
+        <image name="blue-circle-selected.png" width="29" height="29"/>
+        <image name="blue-circle-selected.png" width="29" height="29"/>
+        <image name="blue-circle-selected.png" width="29" height="29"/>
+        <image name="blue-circle-selected.png" width="29" height="29"/>
+        <image name="blue-circle-unselected.png" width="31" height="31"/>
+        <image name="blue-circle-unselected.png" width="31" height="31"/>
+        <image name="blue-circle-unselected.png" width="31" height="31"/>
+        <image name="blue-circle-unselected.png" width="31" height="31"/>
         <image name="blue-circle-unselected.png" width="31" height="31"/>
         <image name="blue-edit.png" width="28" height="27"/>
         <image name="blue-handle.png" width="26" height="44"/>
         <image name="blue-trash.png" width="22" height="31"/>
         <image name="cancel-button-selected.png" width="107" height="46"/>
+        <image name="cancel-button-selected.png" width="107" height="46"/>
         <image name="cancel-button.png" width="107" height="46"/>
         <image name="orange-circle-selected.png" width="29" height="30"/>
+        <image name="orange-circle-selected.png" width="29" height="30"/>
+        <image name="orange-circle-selected.png" width="29" height="30"/>
+        <image name="orange-circle-selected.png" width="29" height="30"/>
+        <image name="orange-circle-selected.png" width="29" height="30"/>
+        <image name="orange-circle-selected.png" width="29" height="30"/>
+        <image name="orange-circle-selected.png" width="29" height="30"/>
+        <image name="orange-circle-selected.png" width="29" height="30"/>
+        <image name="orange-circle-selected.png" width="29" height="30"/>
+        <image name="orange-circle-selected.png" width="29" height="30"/>
+        <image name="orange-circle-unselected.png" width="29" height="28"/>
+        <image name="orange-circle-unselected.png" width="29" height="28"/>
+        <image name="orange-circle-unselected.png" width="29" height="28"/>
+        <image name="orange-circle-unselected.png" width="29" height="28"/>
         <image name="orange-circle-unselected.png" width="29" height="28"/>
         <image name="orange-edit.png" width="28" height="27"/>
         <image name="orange-handle.png" width="26" height="44"/>
         <image name="orange-trash.png" width="22" height="30"/>
         <image name="save-button-selected.png" width="162" height="46"/>
+        <image name="save-button-selected.png" width="162" height="46"/>
+        <image name="save-button-selected.png" width="162" height="46"/>
+        <image name="save-button-selected.png" width="162" height="46"/>
+        <image name="save-button.png" width="162" height="46"/>
         <image name="save-button.png" width="162" height="46"/>
         <image name="settings.png" width="41" height="42"/>
         <image name="start-button.png" width="61" height="81"/>
